Add a warning if the original assessment and post IFA assessment contain different finding counts.

--- a/java/src/com/ibm/appscan/ifa/client/messages.properties
+++ b/java/src/com/ibm/appscan/ifa/client/messages.properties
@@ -1,5 +1,5 @@
 #
-# ©  Copyright HCL Technologies Ltd. 2017.  All Rights Reserved.
+#   Copyright HCL Technologies Ltd. 2017.  All Rights Reserved.
 # LICENSE: Apache License, Version 2.0 https://www.apache.org/licenses/LICENSE-2.0
 #
 
@@ -26,6 +26,8 @@ err.servers.all.down=Supplied server(s) are all down, or are unknown
 err.self.signed.cert=The certificate is self signed. Use option -s to allow self signed certs, or get a proper certificate on {0}.
 err.no.assessment.returned=No assessments found in job result
 err.util.exception=Timeout error occurred on the server. Resubmitting job.
+err.fail.verify=Failed to verify return assessment. Reason: {0}
+err.finding.count.off=WARNING: finding count of original ({0}) and post IFA operation assessment ({1}) differ
 
 option.single.host=Specify the server host. Requires the protocol, host and port number to be specified - eg http://server_1:9080 Default value: http://localhost:9080
 option.multi.host=Comma separated list of hosts. Requires the protocol, host and port number to be specified - eg http://server_1:9080,http://server_2:9080. Default value: http://localhost:9080
