1 - add in a new switch to allow zero delta results to simply remove the returned assessment

--- a/java/src/com/ibm/appscan/ifa/client/messages.properties
+++ b/java/src/com/ibm/appscan/ifa/client/messages.properties
@@ -38,6 +38,7 @@ option.ifa=Apply IFA filtering to specified assessment.
 option.ifa.delta=Apply IFA filtering to specified assessment. Only new findings which have not been submitted for IFA on this server yet will be returned.
 option.groups=Retrieve solution groups for specified assessment
 option.groups=Compare the assessment(s) for -a with this baseline
+option.zero.delta=Remove delta results with 0 findings
 option.debug=Disable encryption on zip file.
 option.invalid.cert=Accept invalid and self signed certificates.
 option.delta.baseline=Baseline Assessment> <New Assessment
@@ -94,3 +95,7 @@ action.null=Action is Null
 host.version=Host: {0} Version: {1}
 
 host.health=Host: {0}\nHealth:\n{1}
+
+delta.new=new
+delta.missing=missing
+zero.delta=Delta resulted in 0 {0} different, removing {1}
