added Info count in the details message

--- a/java/src/com/ibm/appscan/ifa/client/messages.properties
+++ b/java/src/com/ibm/appscan/ifa/client/messages.properties
@@ -50,7 +50,7 @@ option.arg.assmt=Assessment File
 
 process.verify=Verifying returned payload
 
-details=Details for {0}:\n\tTotal Findings: {1}\n\tHigh: {2}\n\tMedium: {3}\n\tLow: {4}
+details=Details for {0}:\n\tTotal Findings: {1}\n\tHigh: {2}\n\tMedium: {3}\n\tLow: {4}\n\tInfo: {5}
 details.excluded=\tExcluded: {0}
 details.assessment=Details for {0}
 processing=Processing: {0}
